--- a/test.css
+++ b/test.css
@@ -236,7 +236,7 @@ li.active[class] span,
 /* new scrollbar */
 .p-channel_sidebar div.c-custom_scrollbar__thumb_vertical, .p-channel_sidebar div.c-scrollbar__bar {
   background: var(--background-elevated);
-  border: 1px solid var(--scrollbar-border);
+  border: 1px solid #555;
 }
 
 #channels_scroller.show_which_channel_is_active[class] li.active .presence.active i.presence_icon,
